refactor: authorized for controller