@@ -6,12 +6,11 @@ import com.smartquit.smartquitiot.entity.*;
 import com.smartquit.smartquitiot.enums.ConversationType;
 import com.smartquit.smartquitiot.mapper.MessageMapper;
 import com.smartquit.smartquitiot.repository.*;
+import com.smartquit.smartquitiot.service.AccountService;
 import com.smartquit.smartquitiot.service.MessageService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.transaction.support.TransactionSynchronization;
@@ -19,22 +18,24 @@ import org.springframework.transaction.support.TransactionSynchronizationManager
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class    MessageServiceImpl implements MessageService {
+public class MessageServiceImpl implements MessageService {
 
     private final ConversationRepository conversationRepository;
     private final MessageRepository messageRepository;
     private final ParticipantRepository participantRepository;
     private final AccountRepository accountRepository;
     private final SimpMessagingTemplate messagingTemplate;
+    private final AccountService accountService; // <-- inject standardized service
 
     @Override
     @Transactional
     public MessageDTO sendMessage(MessageCreateRequest req) {
-        Account sender = resolveCurrentAccount();
+        Account sender = accountService.getAuthenticatedAccount(); // standardized
         if (sender == null) throw new IllegalStateException("Unauthenticated");
 
         Conversation conv;
@@ -46,11 +47,21 @@ public class    MessageServiceImpl implements MessageService {
             boolean isParticipant = participantRepository.findByConversationAndAccount(conv, sender).isPresent();
             if (!isParticipant) {
                 if (conv.getType() == ConversationType.DIRECT) {
-                    Participant p = new Participant();
-                    p.setConversation(conv);
-                    p.setAccount(sender);
-                    participantRepository.save(p);
-                    conv.getParticipants().add(p);
+                    // avoid duplicates: check again by account id
+                    boolean already = conv.getParticipants() == null
+                            ? false
+                            : conv.getParticipants().stream()
+                            .anyMatch(p -> p.getAccount() != null && p.getAccount().getId() == sender.getId());
+
+                    if (!already) {
+                        Participant p = new Participant();
+                        p.setConversation(conv);
+                        p.setAccount(sender);
+                        participantRepository.save(p);
+                        // ensure list initialized
+                        if (conv.getParticipants() == null) conv.setParticipants(new java.util.ArrayList<>());
+                        conv.getParticipants().add(p);
+                    }
                 } else {
                     throw new SecurityException("You are not a participant of this group conversation");
                 }
@@ -62,28 +73,31 @@ public class    MessageServiceImpl implements MessageService {
             Account target = accountRepository.findById(req.getTargetUserId())
                     .orElseThrow(() -> new IllegalArgumentException("Target user not found"));
 
-            conv = conversationRepository.findDirectConversationBetween(sender.getId(), target.getId())
-                    .orElseGet(() -> {
-                        Conversation c = new Conversation();
-                        c.setTitle(null);
-                        c.setType(ConversationType.DIRECT);
-                        c.setLastUpdatedAt(LocalDateTime.now());
-                        c = conversationRepository.save(c);
+            Optional<Conversation> convOpt = conversationRepository.findDirectConversationBetween(sender.getId(), target.getId());
+            if (convOpt.isPresent()) {
+                conv = convOpt.get();
+            } else {
+                Conversation c = new Conversation();
+                c.setTitle(null);
+                c.setType(ConversationType.DIRECT);
+                c.setLastUpdatedAt(LocalDateTime.now());
+                c = conversationRepository.save(c);
 
-                        Participant p1 = new Participant();
-                        p1.setAccount(sender);
-                        p1.setConversation(c);
-                        participantRepository.save(p1);
+                Participant p1 = new Participant();
+                p1.setAccount(sender);
+                p1.setConversation(c);
+                participantRepository.save(p1);
 
-                        Participant p2 = new Participant();
-                        p2.setAccount(target);
-                        p2.setConversation(c);
-                        participantRepository.save(p2);
+                Participant p2 = new Participant();
+                p2.setAccount(target);
+                p2.setConversation(c);
+                participantRepository.save(p2);
 
-                        c.getParticipants().add(p1);
-                        c.getParticipants().add(p2);
-                        return c;
-                    });
+                c.setParticipants(new java.util.ArrayList<>());
+                c.getParticipants().add(p1);
+                c.getParticipants().add(p2);
+                conv = c;
+            }
         } else {
             throw new IllegalArgumentException("Either conversationId or targetUserId must be provided");
         }
@@ -95,7 +109,7 @@ public class    MessageServiceImpl implements MessageService {
         msg.setContent(req.getContent());
         msg.setMessageType(req.getMessageType());
         msg.setDeleted(false);
-        // Xử lý tiếp attachment
+
         if (req.getAttachments() != null && !req.getAttachments().isEmpty()) {
             List<Attachment> attachmentEntities = req.getAttachments().stream()
                     .map(url -> {
@@ -104,17 +118,16 @@ public class    MessageServiceImpl implements MessageService {
                         att.setMessage(msg);
                         return att;
                     })
-                    .toList();
-
+                    .collect(Collectors.toList());
             msg.setAttachments(attachmentEntities);
         }
+
         Message saved = messageRepository.save(msg);
 
         // update conversation lastUpdatedAt
-        conv.setLastUpdatedAt(saved.getSentAt());
+        conv.setLastUpdatedAt(saved.getSentAt() != null ? saved.getSentAt() : LocalDateTime.now());
         conversationRepository.save(conv);
 
-        // ------ FIX: capture finals for inner class ------
         final int convId = conv.getId();
         final Message savedFinal = saved;
         final String clientMessageIdFinal = req.getClientMessageId();
@@ -130,6 +143,7 @@ public class    MessageServiceImpl implements MessageService {
                                     MessageMapper.toResponse(savedFinal, clientMessageIdFinal));
                         }
                     } catch (Exception ex) {
+                        // log properly in production
                         ex.printStackTrace();
                     }
                 }
@@ -147,7 +161,7 @@ public class    MessageServiceImpl implements MessageService {
     @Override
     @Transactional(readOnly = true)
     public List<MessageDTO> getMessages(int conversationId, Integer beforeId, int limit) {
-        Account current = resolveCurrentAccount();
+        Account current = accountService.getAuthenticatedAccount();
         Conversation conv = conversationRepository.findById(conversationId)
                 .orElseThrow(() -> new IllegalArgumentException("Conversation not found"));
 
@@ -158,21 +172,5 @@ public class    MessageServiceImpl implements MessageService {
 
         List<Message> messages = messageRepository.findMessagesByConversationBeforeId(conversationId, beforeId, PageRequest.of(0, limit));
         return messages.stream().map(m -> MessageMapper.toResponse(m, null)).collect(Collectors.toList());
-    }
-
-    private Account resolveCurrentAccount() {
-        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-        if (auth == null) return null;
-        String principal = auth.getName();
-
-        Account account = accountRepository.findByUsername(principal).orElse(null);
-        if (account == null) {
-            try {
-                int id = Integer.parseInt(principal);
-                account = accountRepository.findById(id).orElse(null);
-            } catch (NumberFormatException ignored) {
-            }
-        }
-        return account;
     }
 }
